# cloverleaf

./: .gitignore  Cargo.toml  Rocket.toml  localhost+3-key.pem  localhost+3.pem
api/: Cargo.toml
api/src/: connect.rs  lib.rs  payload.rs  request.rs  server.rs  state.rs
cloverleaf_api/: Cargo.toml
cloverleaf_api/src/: connect.rs  lib.rs  payload.rs  state.rs
cloverleaf_core/: Cargo.toml
cloverleaf_core/src/: candidate_type.rs  encryptor.rs  ice_agent.rs  ice_candidate.rs  lib.rs  mdns_resolver.rs  parsed_ice_candidate.rs  sdp.rs  streamer.rs  transport.rs  viewer.rs
cloverleaf_core/tests/: test_ice_agent_create.rs  test_ice_agent_get_credentials.rs  test_ice_agent_set_remote_credentials.rs  test_mdns_resolutions.rs  test_sdp_parsing.rs
cloverleaf_rtsp/: Cargo.toml
cloverleaf_rtsp/src/: client.rs  lib.rs  rtp_packet.rs
cloverleaf_rtsp/tests/: test_source.rs
cloverleaf_ui/: package-lock.json  package.json
cloverleaf_ui/public/: index.html
cloverleaf_ui/src/: index.js
cloverleaf_ui/src/components/: App.jsx
core/: Cargo.toml  lib.rs  peer.rs
core/src/: candidate_type.rs  ice_agent.rs  ice_candidate.rs  lib.rs  sdp.rs  transport.rs
core/tests/: test_ice_agent_create.rs  test_ice_agent_get_credentials.rs  test_ice_agent_set_remote_credentials.rs  test_sdp_parsing.rs
html/: asset-manifest.json  index.html  test.js
html/static/js/: 2.cb255655.chunk.js  2.cb255655.chunk.js.map  main.065812fc.chunk.js  main.065812fc.chunk.js.map  runtime-main.7f2b8839.js  runtime-main.7f2b8839.js.map
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  server.rs
src/api/: connect.rs
tests/: test_ice_agent_create.rs
