[package]
name = "cloverleaf_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features=["json"] }
cloverleaf_core = { path = "../cloverleaf_core" }
cloverleaf_rtsp = { path = "../cloverleaf_rtsp" }
glib = "0"
tokio = { version = "1.12.0", features = ["sync"] }
uuid = { version = "0.8.2", features = ["v4"] }
