[package]
name = "cloverleaf_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnice-sys = "0.1.0"
libc = "0"
glib = "0"
gobject-sys = "0"
regex = "1.5.4"
tokio = { version = "1.12.0", features = ["sync"]}
cloverleaf_rtsp = { path = "../cloverleaf_rtsp" }
openssl = "0"
