[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features=["json"] }
cloverleaf_core = { path = "../cloverleaf_core" }
cloverleaf_api = { path = "../cloverleaf_api" }
glib = "0"
